--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>at.technikum</groupId>
-    <artifactId>MCTG</artifactId>
+    <artifactId>MTCG</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -56,6 +56,28 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <!-- RestAssured for HTTP request testing -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+            <scope>test</scope>
+        </dependency>
 
+        <!-- JSON support -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JUnit and RestAssured support for testing -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.3.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
